# aws-cur-v2-processor

./: .gitignore  Makefile  README.md
docker/: Dockerfile  docker-compose.yaml  env_example
docker/infra/grafana/dashboards/: aws_costs.json
docker/infra/grafana/fs/volumes/grafana/etc/grafana/provisioning/datasources/: datasources.yml
src/: main.py  pyproject.toml
src/adapters/input/: local_storage_adapter.py  parquet_reader_adapter.py  s3_storage_adapter.py
src/adapters/output/: elasticsearch_adapter.py  file_manager_adapter.py  opensearch_adapter.py
src/config/: logging.py  settings.py
src/core/application/: commands.py  use_cases.py
src/core/domain/: models.py  services.py
src/factories/: input_adapter_factory.py  output_adapter_factory.py
src/ports/input/: parquet_reader.py
src/ports/output/: database_writer.py  elasticsearch_writer.py  file_manager.py
